--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ p{
     width:40%;
     margin-left: 5%;
     padding-left:2%;
+    background-color: antiquewhite;
 }
 .half-part img{
     width:100%;
